@@ -96,6 +96,13 @@ shared_lastcall=no
 ; linear - rings interfaces in the order specified in this configuration file.
 ;          If you use dynamic members, the members will be rung in the order in
 ;          which they were added
+; wrandom - rings random interface, but uses the member's penalty as a weight
+;           when calculating their metric. So a member with penalty 0 will have
+;           a metric somewhere between 0 and 1000, and a member with penalty 1 will
+;			have a metric between 0 and 2000, and a member with penalty 2 will have
+;           a metric between 0 and 3000. Please note, if using this strategy, the member
+;           penalty is not the same as when using other queue strategies. It is ONLY used
+;           as a weight for calculating metric.
 ;
 ;strategy = ringall
 ;
